# movement-chain-ml

./: .gitignore  .lintstagedrc.json  .pre-commit-config.yaml  CLAUDE.md  FUSION_PIPELINE_PLAN.md  HOOKS_SETUP.md  QUICK_REFERENCE.md  README.md  REPOSITORY_STRUCTURE.txt  SETUP_INSTRUCTIONS.md  commitlint.config.js  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.github/workflows/: pr-validation.yml
.husky/: commit-msg  pre-commit  pre-push
analysis/: ai_coach.py  imu_swing_analyzer.py  pipeline.py  rerun_visualizer.py  schemas.py  sensor_fusion.py  vision_analyzer.py
data/: imu_20260112_171520.csv
docs/: IMPLEMENTATION_SUMMARY.md  golf_swing_paper_101.md
scripts/: test_mediapipe.py
src/: __init__.py
src/movement_chain/: __init__.py  ai_coach.py  imu_swing_analyzer.py  pipeline.py  rerun_visualizer.py  schemas.py  sensor_fusion.py  vision_analyzer.py
tests/: __init__.py  test_example.py
